[tool.poetry]
name = "webchat"
version = "0.1.0"
description = ""
authors = ["gorandalex <andrii.gorobets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.4"
names = "^0.3.0"
aiohttp = "^3.8.3"
aiopath = "^0.6.11"
aiofile = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
